Responsive rules added

--- a/index.html
+++ b/index.html
@@ -19,100 +19,105 @@
 	</head>
 	<body>
 		<main class="content">
-			<h2 class="content__title">Você visitou:</h2>
-			<h2 class="content__title">e talvez se interesse por:</h2>
+			<section id="visited">
+				<h2 class="content__title">Você visitou:</h2>
+				<div class="product">
+					<img
+						src="./original/images/iphone-7-apple-plus-red-com-128gb-tela-retina-hd-de-55-ios-10-dupla-camera-traseira-resistente-a-agua-wi-fi-4g-lte-e-nfc-vermelho-11466328.jpg"
+						alt="Produto"
+						class="product__image"
+					/>
+					<h4 class="product__name">
+						Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
+						Processador Dual Core...
+					</h4>
+					<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
+					<h6 class="product__installments">
+						ou <strong>12x de R$99,92</strong> sem juros
+					</h6>
+					<div class="product__cart-btn-container">
+						<button class="product__cart-btn">
+							adicionar ao carrinho
+							<i class="product__cart-btn__icon mdi mdi-cart-plus"></i>
+						</button>
+					</div>
+				</div>
+			</section>
 
-			<div class="sliders">
-				<div class="slider slider--checked"></div>
-				<div class="slider"></div>
-				<div class="slider"></div>
-			</div>
+			<section id="interest">
+				<h2 class="content__title">e talvez se interesse por:</h2>
 
-			<div class="product product--only-child">
-				<img
-					src="./original/images/iphone-7-apple-plus-red-com-128gb-tela-retina-hd-de-55-ios-10-dupla-camera-traseira-resistente-a-agua-wi-fi-4g-lte-e-nfc-vermelho-11466328.jpg"
-					alt="Produto"
-					class="product__image"
-				/>
-				<h4 class="product__name">
-					Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0", Processador
-					Dual Core...
-				</h4>
-				<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
-				<h6 class="product__installments">
-					ou <strong>12x de R$99,92</strong> sem juros
-				</h6>
-				<div class="product__cart-btn-container">
-					<button class="product__cart-btn">
-						adicionar ao carrinho
-						<i class="product__cart-btn__icon mdi mdi-cart-plus"></i>
-					</button>
+				<div class="sliders">
+					<div class="slider slider--checked"></div>
+					<div class="slider"></div>
+					<div class="slider"></div>
 				</div>
-			</div>
-			<div class="products">
-				<div class="product">
-					<img
-						src="./original/images/iphone-6s-apple-com-tela-47-hd-32gb-3d-touch-ios-9-sensor-touch-id-camera-isight-12mp-wi-fi-4g-gps-bluetooth-e-nfc-cinza-espacial-10404692.jpg"
-						alt="Produto"
-						class="product__image"
-					/>
-					<h4 class="product__name">
-						Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
-						Processador Dual Core...
-					</h4>
-					<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
-					<h6 class="product__installments">
-						ou <strong>12x de R$99,92</strong> sem juros
-					</h6>
-					<div class="product__cart-btn-container">
-						<button class="product__cart-btn">
-							adicionar ao carrinho
-							<i class="product__cart-btn__icon mdi mdi-cart-plus"></i>
-						</button>
+
+				<div class="products">
+					<div class="product">
+						<img
+							src="./original/images/iphone-6s-apple-com-tela-47-hd-32gb-3d-touch-ios-9-sensor-touch-id-camera-isight-12mp-wi-fi-4g-gps-bluetooth-e-nfc-cinza-espacial-10404692.jpg"
+							alt="Produto"
+							class="product__image"
+						/>
+						<h4 class="product__name">
+							Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
+							Processador Dual Core...
+						</h4>
+						<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
+						<h6 class="product__installments">
+							ou <strong>12x de R$99,92</strong> sem juros
+						</h6>
+						<div class="product__cart-btn-container">
+							<button class="product__cart-btn">
+								adicionar ao carrinho
+								<i class="product__cart-btn__icon mdi mdi-cart-plus"></i>
+							</button>
+						</div>
 					</div>
-				</div>
-				<div class="product">
-					<img
-						src="./original/images/MacBook-Pro-Apple-MJLQ2BZ-A-com-Intel-Core-i7-Quad-Core-16GB-256GB-SSD-Leitor-de-Cartoes-HDMI-Bluetooth-Tela-LED-Retina-15-4-e-OS-X-Yosemite-4996363.jpg"
-						alt="Produto"
-						class="product__image"
-					/>
-					<h4 class="product__name">
-						Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
-						Processador Dual Core...
-					</h4>
-					<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
-					<h6 class="product__installments">
-						ou <strong>12x de R$99,92</strong> sem juros
-					</h6>
-					<div class="product__cart-btn-container">
-						<button class="product__cart-btn">
-							adicionar ao carrinho
-							<i class="product__cart-btn__icon mdi mdi-cart-plus"></i>
-						</button>
+					<div class="product">
+						<img
+							src="./original/images/MacBook-Pro-Apple-MJLQ2BZ-A-com-Intel-Core-i7-Quad-Core-16GB-256GB-SSD-Leitor-de-Cartoes-HDMI-Bluetooth-Tela-LED-Retina-15-4-e-OS-X-Yosemite-4996363.jpg"
+							alt="Produto"
+							class="product__image"
+						/>
+						<h4 class="product__name">
+							Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
+							Processador Dual Core...
+						</h4>
+						<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
+						<h6 class="product__installments">
+							ou <strong>12x de R$99,92</strong> sem juros
+						</h6>
+						<div class="product__cart-btn-container">
+							<button class="product__cart-btn">
+								adicionar ao carrinho
+								<i class="product__cart-btn__icon mdi mdi-cart-plus"></i>
+							</button>
+						</div>
 					</div>
-				</div>
-				<div class="product">
-					<img
-						src="./original/images/iMac-Apple-MK142BZ-A-com-Intel-Core-i5-Dual-Core-8GB-1TB-Leitor-de-Cartoes-Wireless-Bluetooth-Webcam-LED-21-5-e-OS-X-El-Capitan-6823995.jpg"
-						alt="Produto"
-						class="product__image"
-					/>
-					<h4 class="product__name">
-						Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
-						Processador Dual Core...
-					</h4>
-					<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
-					<h6 class="product__installments">
-						ou <strong>12x de R$99,92</strong> sem juros
-					</h6>
-					<div class="product__cart-btn-container">
-						<button class="product__cart-btn">
-							adicionar ao carrinho
-							<i class="product__cart-btn__icon mdi mdi-cart-plus"></i>
-						</button>
+					<div class="product">
+						<img
+							src="./original/images/iMac-Apple-MK142BZ-A-com-Intel-Core-i5-Dual-Core-8GB-1TB-Leitor-de-Cartoes-Wireless-Bluetooth-Webcam-LED-21-5-e-OS-X-El-Capitan-6823995.jpg"
+							alt="Produto"
+							class="product__image"
+						/>
+						<h4 class="product__name">
+							Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
+							Processador Dual Core...
+						</h4>
+						<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
+						<h6 class="product__installments">
+							ou <strong>12x de R$99,92</strong> sem juros
+						</h6>
+						<div class="product__cart-btn-container">
+							<button class="product__cart-btn">
+								adicionar ao carrinho
+								<i class="product__cart-btn__icon mdi mdi-cart-plus"></i>
+							</button>
+						</div>
 					</div>
-				</div>
+				</section>
 			</div>
 		</main>
 	</body>
