Ending the challenge

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<main class="content">
 			<section id="visited">
 				<h2 class="content__title">Você visitou:</h2>
-				<div class="product">
+				<div class="product" id="item">
 					<img
 						src="./original/images/iphone-7-apple-plus-red-com-128gb-tela-retina-hd-de-55-ios-10-dupla-camera-traseira-resistente-a-agua-wi-fi-4g-lte-e-nfc-vermelho-11466328.jpg"
 						alt="Produto"
@@ -31,7 +31,7 @@
 						Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
 						Processador Dual Core...
 					</h4>
-					<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
+					<h5 class="product__price">Por: <strong>R$ 1.199,00</strong></h5>
 					<h6 class="product__installments">
 						ou <strong>12x de R$99,92</strong> sem juros
 					</h6>
@@ -64,7 +64,7 @@
 							Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
 							Processador Dual Core...
 						</h4>
-						<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
+						<h5 class="product__price">Por: <strong>R$ 1.199,00</strong></h5>
 						<h6 class="product__installments">
 							ou <strong>12x de R$99,92</strong> sem juros
 						</h6>
@@ -85,7 +85,7 @@
 							Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
 							Processador Dual Core...
 						</h4>
-						<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
+						<h5 class="product__price">Por: <strong>R$ 1.199,00</strong></h5>
 						<h6 class="product__installments">
 							ou <strong>12x de R$99,92</strong> sem juros
 						</h6>
@@ -106,7 +106,7 @@
 							Tablet Samsung Galaxy Tab2 7.0 P3100 Branco com Tela 7,0",
 							Processador Dual Core...
 						</h4>
-						<h5 class="product__value">Por: <strong>R$ 1.199,00</strong></h5>
+						<h5 class="product__price">Por: <strong>R$ 1.199,00</strong></h5>
 						<h6 class="product__installments">
 							ou <strong>12x de R$99,92</strong> sem juros
 						</h6>
@@ -117,8 +117,11 @@
 							</button>
 						</div>
 					</div>
+				</div>
 				</section>
 			</div>
 		</main>
+
+		<script src="./assets/js/index.js"></script>
 	</body>
 </html>
